# code-asistant

./: pyproject.toml
code_asistant/src/data/: clone_repos.py
