[tool.poetry]
name = "code-asistant"
version = "0.1.0"
description = ""
authors = ["iratxeMoya <iratxe.moya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
tqdm = "^4.66.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
datasets = "^2.19.1"
github = "^1.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
